fix overflowing buttons and example problems

--- a/styles/home-styles.css
+++ b/styles/home-styles.css
@@ -171,7 +171,7 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 .shrunk-shrunk-question {
-    font-size: 1.9vw;
+    font-size: 1.75vw;
 }
 
 .shrunk-3x-question {
@@ -263,7 +263,7 @@ body::-webkit-scrollbar-thumb:hover {
 }
 
 #feedback-button {
-    width: 15vw;
+    width: 16vw;
     height: 2.4vw;
     font-size: 1.06vw;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -273,6 +273,7 @@ body::-webkit-scrollbar-thumb:hover {
     border-radius: calc(0.1 * 2vw);
     border: 0.15vw solid rgb(75, 9, 108);
     margin-bottom: 0.25vw;
+    white-space: nowrap;
 }
 
 #feedback-button:hover,
@@ -298,16 +299,17 @@ body::-webkit-scrollbar-thumb:hover {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: white;
     font-weight: 500;
-    background-color: rgb(81, 103, 173);
-    border: 0.15vw solid rgb(57, 85, 175);
+    background-color: rgb(64, 84, 151);
+    border: 0.15vw solid rgb(38, 72, 185);
     border-radius: calc(0.1 * 2vw);
+    white-space: nowrap;
 }
 
 #see-info-button:hover,
 #see-info-button:focus {
     cursor: pointer;
-    background-color: rgb(101, 124, 199);
-    font-size: 1.175vw;
+    background-color: rgb(72, 95, 170);
+    font-size: 1.19vw;
     border-width: 0.18vw;
 }
 
@@ -352,7 +354,7 @@ body::-webkit-scrollbar-thumb:hover {
     }
 
     #feedback-button {
-        width: 17vw;
+        width: 19vw;
         height: 3vw;
         font-size: 1.23vw;
     }
@@ -375,6 +377,10 @@ body::-webkit-scrollbar-thumb:hover {
 
     #generator-info-examples {
         font-size: 1.2vw;
+    }
+
+    .shrunk-shrunk-question {
+        font-size: 1.9vw;
     }
 }
 
@@ -463,16 +469,24 @@ body::-webkit-scrollbar-thumb:hover {
         font-size: 8.5vw;
     }
 
+    .slightly-shrunk-question {
+        font-size: 7vw;
+    }
+
     .shrunk-question {
-        font-size: 6.5vw;
+        font-size: 5.5vw;
+    }
+
+    .medium-shrunk-question {
+        font-size: 5.5vw;
     }
 
     .shrunk-shrunk-question {
-        font-size: 6vw;
+        font-size: 4.5vw;
     }
 
-    .slightly-shrunk-question {
-        font-size: 7vw;
+    .shrunk-3x-question {
+        font-size: 4vw;
     }
 
     #coming-soon-problems {
@@ -480,7 +494,7 @@ body::-webkit-scrollbar-thumb:hover {
     }
 
     #feedback-button {
-        width: 42vw;
+        width: 45vw;
         height: 6.7vw;
         font-size: 2.9vw;
         border-radius: calc(0.4 * 2vw);
